# mcpunit

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  ROADMAP.md  SECURITY.md  action.yml  deny.toml  rustfmt.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  fuzz.yml  release.yml
.mcp/: demo.rs
.reports/: demo.json  demo.md  demo.sarif  demo.txt
fuzz/: Cargo.toml
fuzz/fuzz_targets/: jsonrpc_parser.rs  sarif_fingerprint.rs
src/: error.rs  lib.rs  models.rs  scoring.rs
src/reporters/: json.rs  markdown.rs  mod.rs  sarif.rs  summary.rs  terminal.rs
src/rules/: capability.rs  description.rs  helpers.rs  identity.rs  mod.rs  prompts.rs  schema.rs
src/transport/: http.rs  jsonrpc.rs  mod.rs  stdio.rs
tests/: audit_regression.rs  reporter_snapshots.rs  transport_http.rs  transport_stdio.rs
tests/fixtures/: clean_server.json  dangerous_server.json
tests/snapshots/: reporter_snapshots__markdown_clean.snap  reporter_snapshots__markdown_dangerous.snap  reporter_snapshots__terminal_clean.snap  reporter_snapshots__terminal_dangerous.snap  reporter_snapshots__terminal_noisy.snap
