[package]
name = "mcpunit"
version = "1.2.0"
edition = "2021"
rust-version = "1.75"
authors = ["Danil Shutsky <thecutcode@gmail.com>"]
description = "Deterministic CI-first quality audit for MCP servers"
license = "MIT"
homepage = "https://cutcode.dev"
repository = "https://github.com/lee-to/mcpunit"
documentation = "https://docs.rs/mcpunit"
readme = "README.md"
keywords = ["mcp", "audit", "quality", "security", "sarif"]
categories = ["command-line-utilities", "development-tools::testing"]

[lib]
name = "mcpunit"
path = "src/lib.rs"

[[bin]]
name = "mcpunit"
path = "src/bin/mcpunit.rs"

# Demo MCP server used for smoke tests and regeneration of `.reports/`.
# Source lives under `.mcp/` (hidden so it doesn't clutter repo browsing).
# Built with `cargo build --example demo`.
[[example]]
name = "demo"
path = ".mcp/demo.rs"

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
chrono = { version = "0.4", default-features = false, features = ["std", "serde", "clock"] }
once_cell = "1.19"
sha2 = "0.10"
ureq = { version = "2.10", default-features = false, features = ["tls", "json"] }

[dev-dependencies]
insta = { version = "1.39", features = ["yaml"] }
pretty_assertions = "1.4"
wiremock = "0.6"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
opt-level = 3
debug = false
incremental = false
overflow-checks = false

[profile.dev]
opt-level = 0
debug = true

# Release matrix metadata. Consumed by tools like `cargo dist` when they
# need to know which platforms this crate publishes for; the actual release
# pipeline lives in `.github/workflows/release.yml` and is hand-written so
# a reader can follow it end-to-end without a generator in the loop.
#
# Linux ships both glibc (`-gnu`) and static musl (`-musl`) builds. The
# glibc variant is the default for GitHub-hosted runners (Ubuntu, modern
# Debian/RHEL). The musl variant is a fully static binary for Alpine,
# distroless, and scratch-based container images where the glibc loader
# is absent (`sh: mcpunit: not found`).
[package.metadata.dist]
targets = [
    "x86_64-unknown-linux-gnu",
    "aarch64-unknown-linux-gnu",
    "x86_64-unknown-linux-musl",
    "aarch64-unknown-linux-musl",
    "x86_64-apple-darwin",
    "aarch64-apple-darwin",
    "x86_64-pc-windows-msvc",
]
# Binary size budget: <= 5 MiB on `x86_64-unknown-linux-gnu` (asserted in
# release.yml). Tuned for the glibc-dynamic build which is slightly larger
# than a fully-stripped musl static binary.
